--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -2,7 +2,7 @@
 {% comment %} <header class="header-area"> {% endcomment %}
 	<div class="header-top black-bg top-bar" id="topbar-dismiss">
 		<div class="container-fluid top-bar-cross" style="cursor:auto;" >
-			<i class="fas fa-times" id="top-cross" style="cursor:pointer;"></i>
+			<i class="fas fa-times mr-10" id="top-cross" style="cursor:pointer;"></i>
 		</div>
 		<div class="container">
 			<div class="row-x">
