--- a/src/templates/auth/password_change_done.html
+++ b/src/templates/auth/password_change_done.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
-                    <div class="login-register-tab-list nav">
+                    <div class="login-register-tab-list nav pb-3">
                         <a class="active" data-toggle="tab" href="#lg1">
                             <h4> Password Change Done </h4>
                         </a>
@@ -37,7 +37,7 @@
                                     <div class="text-center">
                                         <p class="text-success text-center">Password changed succesfully. Please keep your password secret.</p>
                                         <br>
-                                        <div class="button-box">
+                                        <div class="button-box pt-3">
                                             <button class=""><a href={% url 'auth:login' %}>Login</a></button>
                                         </div>
                                     </div>
