--- a/src/templates/auth/verify_and_password_reset.html
+++ b/src/templates/auth/verify_and_password_reset.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
-                    <div class="login-register-tab-list nav">
+                    <div class="login-register-tab-list nav pb-3">
                         <a class="active" data-toggle="tab" href="#lg1">
                             <h4> {{ main_heading }} </h4>
                         </a>
@@ -37,7 +37,7 @@
                                     <form enctype="multipart/form-data" action="" method="post"> {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
-                                        <div class="button-box">
+                                        <div class="button-box pt-3">
                                             <button type="submit"><span>{{submit_btn_text}}</span></button>
                                         </div>
                                     </form>
