--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
-                    <div class="login-register-tab-list nav">
+                    <div class="login-register-tab-list nav pb-3">
                         <a class="active" data-toggle="tab" href="#lg1">
                             <h4> login </h4>
                         </a>
