--- a/src/templates/express/basic_format_template.html
+++ b/src/templates/express/basic_format_template.html
@@ -28,8 +28,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
-                    <div class="login-register-tab-list nav">
-                        
+                    <div class="login-register-tab-list nav pb-3">
                         <a class="active" data-toggle="tab" href="#lg2">
                             <h4> {{ page_context.main_heading }} </h4>
                         </a>
@@ -41,7 +40,7 @@
                                     <form action="" method="post"> {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
-                                        <div class="button-box">
+                                        <div class="button-box pt-3">
                                             <button type="submit"><span>Submit</span></button>
                                         </div>
                                     </form>
