--- a/src/templates/express/express_home.html
+++ b/src/templates/express/express_home.html
@@ -27,8 +27,7 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
-                    <div class="login-register-tab-list nav">
-                        
+                    <div class="login-register-tab-list nav pb-3">
                         <a class="active" data-toggle="tab" href="#lg2">
                             <h4> {{ page_context.main_heading }} </h4>
                         </a>
