--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -11,11 +11,11 @@
                 <h1 class="animated banner-title"  data-aos="fade-right">TAWSIL  EXPRESS</h1>
                 <h3 class="animated banner-subtitle">good food and express delivery.</h3>
                 <div class="slider-btn-x mt-30">
-                    <form action="" >{% csrf_token %}
+                    <form action="GET" >{% csrf_token %}
                         <div class="search-form">
                             <div>
-                                <div class="search-in" ></div>
-                                <input style="position:relative;bottom:61px;" class="search-in " type="text" placeholder="Search You Food Or Track Your Percel">
+                                <div class="search-in"></div>
+                                <input style="" class="search-in search-in-2 " type="text" placeholder="Search You Food Or Track Your Percel">
                             </div>
                             <button type="submit" class="search-btn"><i class="fas fa-search"></i></button>
                         </div>
