--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -35,7 +35,7 @@
                 <p class="banner-two-left-details mb-40">
                     TAWSIL EXPRESS aims to aid Bangladesh’s expanding e-commerce sector by providing techfirst logiscs support. With exclusive features and a talented workforce, TAWSIL EXPRESS gives the delivery service industry of Bangladesh a brand new pace.
                 </p>
-                <a href="#" class="ah">become merchent</a>
+                <a href="{% url 'express:register_merchant' %}" class="ah">become merchent</a>
             </div>
             <div class="col-sm-12 col-md-6 banner-two-right">
                 <img src="{% static 'home/Moving-Truck-Vector.png' %}" alt="banner two img">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <p class="pt-10 color-sec">Interested? Let's start our </br>partnership today!</p>
-                    <a href="#" class="ah">GET STARTED!</a>
+                    <a href="{% url 'vendors:register_store' %}" class="ah">GET STARTED!</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 prepare-food-right p-0 m-0">
