--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -13,7 +13,7 @@
 					"class="fas fa-motorcycle p-0 m-0" 
 					></i>
 					<p class="p-0 m-0 top-bar-dialog" >JOIN RIDE TEAM!</p>
-					<a href="#" class=" top-bar-apply">Apply Now</a>
+					<a href="{% url 'express:register_merchant' %}" class=" top-bar-apply">Apply Now</a>
 				</div>
 				{% comment %} <div class="col-lg-4 col-md-4 col-12 col-sm-4">
 					<div class="welcome-area">
