remove all unneccsary

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -49,12 +49,12 @@
     </head>
     <body>
         <!--preloader-->
-        <div class="preloader-container">
+        {% comment %} <div class="preloader-container">
             <div class="preloader">
                 {% include "partials/preloader.html" %}
                 <h1>Loading...</h1>
             </div>
-        </div>
+        </div> {% endcomment %}
         <!-- header start -->
         {% include 'partials/top_header.html' %} 
         <header class="header-area" id="headbar-cross">
